--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -20,11 +20,18 @@
     <h2>
       <div class="ui center aligned">
           <nav class="ui menu">
-              <%= link_to 'Add Task', new_board_list_path(@board), class: "ui blue button" %>
+              <%= link_to 'Add Task', new_list_task_path(list), class: "ui blue button" %>
               <%= link_to 'Edit List', edit_board_list_path(@board,list), class: "ui green button" %>
               <%= link_to 'Delete List', board_list_path(@board, list), method: :delete, class: "ui red button" %>
           </nav> 
-        <%= list.title %>
+        <%= list.title %> 
+          <% list.tasks.each do |task| %>
+        <div class="ui card">
+          <%= task.title %>
+          <hr />
+          <%= task.description %> 
+        </div>
+        <% end %>
       </div>
     </h2>
     <br />
