--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,3 +1,8 @@
+<nav class="ui menu">
+    <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "item" %>
+    <%= link_to 'Boards', boards_path, class: "item" %>
+</nav> 
+
 <div class="ui container">
 <h1>Boards</h1>
 <%= link_to 'Add Board', new_board_path, class: "ui blue button" %>
