--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -3,5 +3,9 @@
     <%= f.label :title %>
     <%= f.text_field :title, required: true, placeholder: "Title" %>
   </div>
+  <div class="field">
+    <%= f.label :priority %>
+    <%= f.text_field :priority, required: true, placeholder: "priority" %>
+  </div>
   <%= f.submit class: "ui green button" %>
   <% end %> 
