--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -7,5 +7,9 @@
     <%= f.label :description %>
     <%= f.text_area :description, required: true, placeholder: "Description" %>
   </div>
+  <div class="field">
+    <%= f.label :priority %>
+    <%= f.text_field :priority, required: true, placeholder: "priority" %>
+  </div>
   <%= f.submit class: "ui green button" %>
   <% end %> 
