--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,4 +2,6 @@
 <h1>Add Task</h1>
 <hr />
 <%= render "form" %> 
+<br />
+<%= link_to 'Back', board_path(@list.board_id), class: "ui blue button" %>
 </div>
